@@ -22,8 +22,6 @@ import math
 import re
 import sys
 
-from twitter.common import log
-
 from apache.aurora.client import binding_helper
 from apache.aurora.client.base import die
 from apache.aurora.config import AuroraConfig
@@ -68,43 +66,6 @@ def __validate_env(name, config_name):
 def _validate_environment_name(config):
   env_name = str(config.raw().environment())
   __validate_env(env_name, 'Environment')
-
-
-INVALID_HEALTH_CHECKER = '''
-Invalid health endpoint config.
-'''
-
-MUST_PROVIDE_SHELL_COMMAND_ERROR = '''
-Must provide a shell command if using ShellHealthChecker.
-'''
-
-HTTP_DEPRECATION_WARNING = '''
-WARNING: endpoint, expected_response, and expected_response_code are deprecated and will be removed
-in the next release. Please consult updated documentation.
-'''
-
-HTTP_HEALTH_CHECK = 'http'
-SHELL_HEALTH_CHECK = 'shell'
-
-
-# TODO (AURORA-1552): Add config validation to the executor
-def _validate_health_check_config(config):
-  health_check_config = config.health_check_config().get()
-  health_checker = health_check_config.get('health_checker', {})
-  # If we have old-style of configuring.
-  # TODO (AURORA-1563): Remove this code after we drop support for defining these directly in
-  # HealthCheckConfig.
-  for deprecated in {'endpoint', 'expected_response', 'expected_response_code'}:
-    if deprecated in health_check_config:
-      log.warn(HTTP_DEPRECATION_WARNING)
-      break
-  if SHELL_HEALTH_CHECK in health_checker:
-    # Make sure we specified a shell_command if we chose a shell config.
-    shell_health_checker = health_checker.get(SHELL_HEALTH_CHECK, {})
-    shell_command = shell_health_checker.get('shell_command')
-    if not shell_command:
-      # Must define a command.
-      die(MUST_PROVIDE_SHELL_COMMAND_ERROR)
 
 
 UPDATE_CONFIG_MAX_FAILURES_ERROR = '''
@@ -157,7 +118,6 @@ def validate_config(config, env=None):
   _validate_update_config(config)
   _validate_announce_configuration(config)
   _validate_environment_name(config)
-  _validate_health_check_config(config)
 
 
 class GlobalHookRegistry(object):
